# EmbodiedMind--RAG-Agent

./: .env.example  .gitignore  Dockerfile  LEGAL.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: check_compliance.py  ingest_all.py  ingest_github.py  query_cli.py
src/embodiedmind/: __init__.py
src/embodiedmind/agent/: __init__.py  executor.py  tools.py
src/embodiedmind/api/: router.py
src/embodiedmind/chains/: __init__.py  citation_chain.py  memory.py  retrieval_qa.py
src/embodiedmind/compliance/: __init__.py  attribution.py  rate_limiter.py  robots_checker.py
src/embodiedmind/config/: settings.py  sources.py
src/embodiedmind/ingestion/: chunker.py  loaders.py  pipeline.py  scheduler.py
src/embodiedmind/ui/: gradio_app.py
src/embodiedmind/vectorstore/: __init__.py  chroma_store.py  schema.py
tests/: conftest.py  test_agent.py  test_compliance.py  test_ingestion.py  test_retrieval.py
